progress on reference intervals
