# connector/restapi/server/operations/explore_statistics/explore_statistics.go
@@ -1,0 +1,438 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package explore_statistics
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+
+	"github.com/ldsec/medco/connector/restapi/models"
+)
+
+// ExploreStatisticsHandlerFunc turns a function with the right signature into a explore statistics handler
+type ExploreStatisticsHandlerFunc func(ExploreStatisticsParams, *models.User) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn ExploreStatisticsHandlerFunc) Handle(params ExploreStatisticsParams, principal *models.User) middleware.Responder {
+	return fn(params, principal)
+}
+
+// ExploreStatisticsHandler interface for that can handle valid explore statistics params
+type ExploreStatisticsHandler interface {
+	Handle(ExploreStatisticsParams, *models.User) middleware.Responder
+}
+
+// NewExploreStatistics creates a new http.Handler for the explore statistics operation
+func NewExploreStatistics(ctx *middleware.Context, handler ExploreStatisticsHandler) *ExploreStatistics {
+	return &ExploreStatistics{Context: ctx, Handler: handler}
+}
+
+/*ExploreStatistics swagger:route POST /node/explore-statistics/query explore statistics exploreStatistics
+
+Queries the server to obtain the histogram of the distribution linked to the concept sent as parameter to the request.
+
+*/
+type ExploreStatistics struct {
+	Context *middleware.Context
+	Handler ExploreStatisticsHandler
+}
+
+func (o *ExploreStatistics) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		r = rCtx
+	}
+	var Params = NewExploreStatisticsParams()
+
+	uprinc, aCtx, err := o.Context.Authorize(r, route)
+	if err != nil {
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+	if aCtx != nil {
+		r = aCtx
+	}
+	var principal *models.User
+	if uprinc != nil {
+		principal = uprinc.(*models.User) // this is really a models.User, I promise
+	}
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params, principal) // actually handle the request
+
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
+
+// ExploreStatisticsBadRequestBody explore statistics bad request body
+//
+// swagger:model ExploreStatisticsBadRequestBody
+type ExploreStatisticsBadRequestBody struct {
+
+	// message
+	Message string `json:"message,omitempty"`
+}
+
+// Validate validates this explore statistics bad request body
+func (o *ExploreStatisticsBadRequestBody) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (o *ExploreStatisticsBadRequestBody) MarshalBinary() ([]byte, error) {
+	if o == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(o)
+}
+
+// UnmarshalBinary interface implementation
+func (o *ExploreStatisticsBadRequestBody) UnmarshalBinary(b []byte) error {
+	var res ExploreStatisticsBadRequestBody
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*o = res
+	return nil
+}
+
+// ExploreStatisticsBody explore statistics body
+//
+// swagger:model ExploreStatisticsBody
+type ExploreStatisticsBody struct {
+
+	// ID
+	// Pattern: ^[\w:-]+$
+	ID string `json:"ID,omitempty"`
+
+	// cohort name
+	// Pattern: ^\w+$
+	CohortName string `json:"cohortName,omitempty"`
+
+	// concept
+	// Pattern: ^\/$|^((\/[^\/]+)+\/?)$
+	Concept string `json:"concept,omitempty"`
+
+	// max bound
+	MaxBound float64 `json:"maxBound,omitempty"`
+
+	// min bound
+	MinBound float64 `json:"minBound,omitempty"`
+
+	// modifier
+	Modifier *ExploreStatisticsParamsBodyModifier `json:"modifier,omitempty"`
+
+	// number of buckets
+	NumberOfBuckets int64 `json:"numberOfBuckets,omitempty"`
+
+	// user public key
+	// Pattern: ^[\w=-]+$
+	UserPublicKey string `json:"userPublicKey,omitempty"`
+}
+
+// Validate validates this explore statistics body
+func (o *ExploreStatisticsBody) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := o.validateID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := o.validateCohortName(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := o.validateConcept(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := o.validateModifier(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := o.validateUserPublicKey(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *ExploreStatisticsBody) validateID(formats strfmt.Registry) error {
+
+	if swag.IsZero(o.ID) { // not required
+		return nil
+	}
+
+	if err := validate.Pattern("body"+"."+"ID", "body", string(o.ID), `^[\w:-]+$`); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (o *ExploreStatisticsBody) validateCohortName(formats strfmt.Registry) error {
+
+	if swag.IsZero(o.CohortName) { // not required
+		return nil
+	}
+
+	if err := validate.Pattern("body"+"."+"cohortName", "body", string(o.CohortName), `^\w+$`); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (o *ExploreStatisticsBody) validateConcept(formats strfmt.Registry) error {
+
+	if swag.IsZero(o.Concept) { // not required
+		return nil
+	}
+
+	if err := validate.Pattern("body"+"."+"concept", "body", string(o.Concept), `^\/$|^((\/[^\/]+)+\/?)$`); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (o *ExploreStatisticsBody) validateModifier(formats strfmt.Registry) error {
+
+	if swag.IsZero(o.Modifier) { // not required
+		return nil
+	}
+
+	if o.Modifier != nil {
+		if err := o.Modifier.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("body" + "." + "modifier")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+func (o *ExploreStatisticsBody) validateUserPublicKey(formats strfmt.Registry) error {
+
+	if swag.IsZero(o.UserPublicKey) { // not required
+		return nil
+	}
+
+	if err := validate.Pattern("body"+"."+"userPublicKey", "body", string(o.UserPublicKey), `^[\w=-]+$`); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (o *ExploreStatisticsBody) MarshalBinary() ([]byte, error) {
+	if o == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(o)
+}
+
+// UnmarshalBinary interface implementation
+func (o *ExploreStatisticsBody) UnmarshalBinary(b []byte) error {
+	var res ExploreStatisticsBody
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*o = res
+	return nil
+}
+
+// ExploreStatisticsDefaultBody explore statistics default body
+//
+// swagger:model ExploreStatisticsDefaultBody
+type ExploreStatisticsDefaultBody struct {
+
+	// message
+	Message string `json:"message,omitempty"`
+}
+
+// Validate validates this explore statistics default body
+func (o *ExploreStatisticsDefaultBody) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (o *ExploreStatisticsDefaultBody) MarshalBinary() ([]byte, error) {
+	if o == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(o)
+}
+
+// UnmarshalBinary interface implementation
+func (o *ExploreStatisticsDefaultBody) UnmarshalBinary(b []byte) error {
+	var res ExploreStatisticsDefaultBody
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*o = res
+	return nil
+}
+
+// ExploreStatisticsNotFoundBody explore statistics not found body
+//
+// swagger:model ExploreStatisticsNotFoundBody
+type ExploreStatisticsNotFoundBody struct {
+
+	// message
+	Message string `json:"message,omitempty"`
+}
+
+// Validate validates this explore statistics not found body
+func (o *ExploreStatisticsNotFoundBody) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (o *ExploreStatisticsNotFoundBody) MarshalBinary() ([]byte, error) {
+	if o == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(o)
+}
+
+// UnmarshalBinary interface implementation
+func (o *ExploreStatisticsNotFoundBody) UnmarshalBinary(b []byte) error {
+	var res ExploreStatisticsNotFoundBody
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*o = res
+	return nil
+}
+
+// ExploreStatisticsOKBody explore statistics o k body
+//
+// swagger:model ExploreStatisticsOKBody
+type ExploreStatisticsOKBody struct {
+
+	// the encrypted counts of each bucket of the histogram
+	Results []string `json:"results"`
+
+	// unit
+	Unit string `json:"unit,omitempty"`
+}
+
+// Validate validates this explore statistics o k body
+func (o *ExploreStatisticsOKBody) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (o *ExploreStatisticsOKBody) MarshalBinary() ([]byte, error) {
+	if o == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(o)
+}
+
+// UnmarshalBinary interface implementation
+func (o *ExploreStatisticsOKBody) UnmarshalBinary(b []byte) error {
+	var res ExploreStatisticsOKBody
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*o = res
+	return nil
+}
+
+// ExploreStatisticsParamsBodyModifier explore statistics params body modifier
+//
+// swagger:model ExploreStatisticsParamsBodyModifier
+type ExploreStatisticsParamsBodyModifier struct {
+
+	// applied path
+	// Required: true
+	// Pattern: ^((\/[^\/]+)+\/%?)$
+	AppliedPath *string `json:"appliedPath"`
+
+	// modifier key
+	// Required: true
+	// Pattern: ^((\/[^\/]+)+\/)$
+	ModifierKey *string `json:"modifierKey"`
+}
+
+// Validate validates this explore statistics params body modifier
+func (o *ExploreStatisticsParamsBodyModifier) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := o.validateAppliedPath(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := o.validateModifierKey(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *ExploreStatisticsParamsBodyModifier) validateAppliedPath(formats strfmt.Registry) error {
+
+	if err := validate.Required("body"+"."+"modifier"+"."+"appliedPath", "body", o.AppliedPath); err != nil {
+		return err
+	}
+
+	if err := validate.Pattern("body"+"."+"modifier"+"."+"appliedPath", "body", string(*o.AppliedPath), `^((\/[^\/]+)+\/%?)$`); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (o *ExploreStatisticsParamsBodyModifier) validateModifierKey(formats strfmt.Registry) error {
+
+	if err := validate.Required("body"+"."+"modifier"+"."+"modifierKey", "body", o.ModifierKey); err != nil {
+		return err
+	}
+
+	if err := validate.Pattern("body"+"."+"modifier"+"."+"modifierKey", "body", string(*o.ModifierKey), `^((\/[^\/]+)+\/)$`); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (o *ExploreStatisticsParamsBodyModifier) MarshalBinary() ([]byte, error) {
+	if o == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(o)
+}
+
+// UnmarshalBinary interface implementation
+func (o *ExploreStatisticsParamsBodyModifier) UnmarshalBinary(b []byte) error {
+	var res ExploreStatisticsParamsBodyModifier
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*o = res
+	return nil
+}
